[package]
name = "blah"
version = "0.1.0"
authors = ["Ace Eldeib <alexeldeib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.10.0-alpha.2"
tokio = "0.2.0-alpha.6"